<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/back2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PrismActivity">

    <EditText
        android:id="@+id/prismEnterWidthEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:gravity="center"
        android:hint="@string/width"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/prismEnterLengthEditText"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prismTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/prismEnterLengthEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:hint="@string/length"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/prismEnterHeightEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:gravity="center"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toEndOf="@+id/prismEnterLengthEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prismResultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/zero"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prismEnterLengthEditText" />

    <Button
        android:id="@+id/prismBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="36dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/prismClearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="36dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/prismCopyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prismClearButton"
        app:layout_constraintStart_toEndOf="@+id/prismBackButton" />

    <Spinner
        android:id="@+id/prismLengthUnitSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="#6750A3"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prismEnterLengthEditText" />

    <Spinner
        android:id="@+id/prismVolumeUnitSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="#6750A3"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prismResultTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>